[package]
name = "calculator"
version = "1.0.0"
edition = "2021"
authors = ["Vann Rollins"]
description = "A simple integer calculator written in Rust, that uses bitwise logic and the shunting yard algorithm."
readme = "README.md"
repository = "https://github.com/vannrr/calculator/"
license = "MIT"

[dependencies]
leptos = { version = "0.4.5", features = ["csr", "nightly"] }
gtk = { version = "0.6.6", package = "gtk4" }
